<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_share_app_link"
        android:icon="@mipmap/ic_person_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_share_app_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="200"
        android:title="@string/action_send_invitation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
