<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never|collapseActionView" />
    <item
        android:id="@+id/action_telepathy"
        android:orderInCategory="200"
        android:title="@string/action_telepathy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_messages"
        android:orderInCategory="300"
        android:title="@string/action_delete_messages"
        app:showAsAction="never" />
</menu>
