<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tx_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/label_set_life_time"
            android:textSize="@dimen/text_size_x_large"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="@dimen/normal_vertical_margin"
            android:paddingBottom="@dimen/normal_vertical_margin"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/normal_vertical_margin"
            android:paddingBottom="@dimen/normal_vertical_margin"
            android:layout_below="@+id/tx_dialog_title">
        <com.atahani.telepathy.ui.component.spinnerwheel.WheelVerticalView
                android:id="@+id/wheel_day"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                app:visibleItems="5"
                app:selectionDivider="@drawable/wheel_divider_gradient_horizontal"
                app:selectionDividerHeight="2dp"
                app:selectionDividerActiveAlpha="100"
                app:selectionDividerDimmedAlpha="255"/>
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tx_day_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:text="@string/label_day"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"/>
        <com.atahani.telepathy.ui.component.spinnerwheel.WheelVerticalView
                android:id="@+id/wheel_hour"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                app:visibleItems="5"
                app:selectionDivider="@drawable/wheel_divider_gradient_horizontal"
                app:selectionDividerHeight="2dp"
                app:selectionDividerActiveAlpha="100"
                app:selectionDividerDimmedAlpha="255"/>
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tx_hour_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:text="@string/label_hours"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"/>
        <com.atahani.telepathy.ui.component.spinnerwheel.WheelVerticalView
                android:id="@+id/wheel_min"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                app:visibleItems="5"
                app:selectionDivider="@drawable/wheel_divider_gradient_horizontal"
                app:selectionDividerHeight="2dp"
                app:selectionDividerActiveAlpha="100"
                app:selectionDividerDimmedAlpha="255"/>
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tx_min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:text="@string/label_min"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>